Updated Code for Online Visit Count

--- a/css/main.css
+++ b/css/main.css
@@ -699,3 +699,15 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #footer-bottom p a {
   color: #FF4F02;
 }
+
+#online-now {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* start with the text hidden */
+  opacity: 0;
+  /* add a transition so it'll fade in nicely */
+  transition: opacity 0.2s ease-out;
+}
+
+#online-now.visible {
+  opacity: 1;
+}
